modifying test cases (pagination and get by email)